<resources>
    <string name="app_name">MyRx</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_manage">Manage</string>
    <!--    This is the Home Fragment Information-->
    <string name="text_home_part1">Hello</string>
    <string name="text_home_part2">your medications are listed below.</string>
    <string name="listed_prescriptions">Here will be your listed prescriptions!</string>
    <!--    This is the Manage Fragment Information-->
    <string name="add_person">Add Person</string>
    <string name="manage_person">Manage Person</string>
    <!--    This is the Search Fragment Information-->
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="new_information">Please Enter All Information to Create a New Person</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_dosage">Medication Dosage</string>
    <string-array name="dosage_type">
        <item>Select a Dosage Type</item>
        <item>mg</item>
        <item>vial</item>
        <item>tablets</item>
        <item>oz</item>
        <item>tsp</item>
        <item>mcg</item>
        <item>units</item>
    </string-array>
    <string-array name = "quantity_type">
        <item>Select a Quantity Type</item>
        <item>bottle</item>
        <item>vial</item>
        <item>tablets</item>
    </string-array>
    <string-array name="frequency_type">
        <item>Select a Frequency Type</item>
        <item>day</item>
        <item>month</item>
        <item>months</item>
    </string-array>
    <string name="enter_last_refill_date">Previous Refill Date</string>
    <string name="medication_quantity">Medication Quantity</string>
    <string name="add_medication">Add Medication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_person_screen">Here you will manage people listed on Home Page.</string>
    <string name="medication_refills_remaining">Remaining Refills</string>
    <string name="medication_expiration">Expiration Date</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="choose_a_medication_to_edit">Choose a Medication to Edit.</string>
    <string name="displayed_expiration_date">Expiration Date</string>
    <string name="displayed_prev_date">Previous Refill Date</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="medication_rx">Medication Rx</string>
    <string name="medication_frequency">Enter Intake Frequency</string>

</resources>