<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

<!--    <SearchView-->
<!--        android:id="@+id/searchView"-->
<!--        android:layout_width="323dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/medicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/medication_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/medicationRefillDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/enter_last_refill_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationQuantity" />

    <Spinner
        android:id="@+id/spinnerDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/medicationDosage"
        app:layout_constraintTop_toTopOf="@+id/medicationDosage" />

    <EditText
        android:id="@+id/medicationDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/medication_dosage"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationName" />

    <EditText
        android:id="@+id/medicationQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/medication_quantity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationDosage" />

    <EditText
        android:id="@+id/medicationRefillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/medication_refills"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationRefillDate" />

    <EditText
        android:id="@+id/medicationExpiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/medication_expiration"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationRefillAmount" />

    <Button
        android:id="@+id/addMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:onClick="addMedicationToScrollView"
        android:text="@string/add_medication"
        app:layout_constraintEnd_toStartOf="@+id/editMedications"
        app:layout_constraintStart_toStartOf="@+id/medicationExpiration"
        app:layout_constraintTop_toBottomOf="@+id/medicationExpiration" />

    <Button
        android:id="@+id/editMedications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_medication"
        android:onClick="editActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addMedication"
        app:layout_constraintTop_toTopOf="@+id/addMedication" />

</androidx.constraintlayout.widget.ConstraintLayout>